web/themes/custom/union_marketing/scss/components/_publication.scss
#block-union-marketing-publication-branding {
  display: flex;
  flex-direction: column;

  @include breakpoint(sm) {
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    max-width: var(--cu-max-width-section, #{$max-width-section});
  }
}

.publication-logo {
  width: 45vw;
  line-height: 1;
  text-decoration: none;

  @include breakpoint(sm) {
    width: 30vw;
    max-width: 440px;
  }
}

.publication-logo--small {
  width: 175px;
}

.publication-logo--subtitle {
  font-size: var(--cu-ms5);

  @include breakpoint(md) {
    font-size: var(--cu-ms6);
  }
}

.publication-logo--issue {
  width: 100%;
}

.publication-feature__meta {
  display: flex;
  background: #efefef;
  margin-bottom: var(--cu-vr1);

  @include breakpoint(sm) {
    margin: 0;
    order: 2;
    grid-row: 1;
    grid-column: 2;
    padding: var(--cu-vr1);
    display: flex;
    flex-direction: column;
  }

  .field--body {
    font-size: var(--cu-ms0);
    font-style: italic;
    padding: var(--cu-vr1);

    @include breakpoint(sm) {
      padding: 0;
      order: 2;
      margin-top: var(--cu-vr1);
      font-size: var(--cu-ms-1);
    }
  }
}

@include breakpoint(sm) {
  .publication__feature {
    display: grid;
    position: relative;
    gap: var(--cu-vr0) 0;
    grid-template-columns: 7fr 3fr;
    grid-template-rows: repeat(2, auto);

    .field--field-featured-story,
    .cu-card,
    .cu-card div {
      display: contents;
    }

    .cu-image {
      object-fit: cover;
      height: 100%;
      order: -1;
      grid-row: 1;
    }

    div.cu-card__content {
      display: grid;
      grid-row: 2;
      grid-column: 1;

      .cu-heading {
        --cu-current-heading-size: var(--cu-ms8);
      }
    }
  }
}

.collection-listing .node--view-mode-banner .cu-banner__media::before {
  background: linear-gradient(to right, rgba(0, 0, 0, 0.6) 35%, rgba(0, 0, 0, 0.3) 45%, rgba(0, 0, 0, 0) 55%);
}

